src/style/PostContent.module.css
.markdownContent {
  line-height: 1.9rem;
  margin-top: 2.0rem;
  overflow-wrap: break-word;
  word-break: break-word;
}

.markdownContent > h1, h2, h3, h4, h5, h6 {
  margin-top: 3.0rem;
}

.markdownContent > div > p > img {
  display: block;
  margin: auto;
  margin-top: 1.0rem;
  margin-bottom: 2.0rem;

}

.markdownContent > div > p > a {
  color: inherit;
}

